--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ header{
   display: grid;
   grid-template-columns: auto auto;
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, .50);
-  border-radius: 0 0 1rem 1rem;
+  border-radius: 0 0 0.75rem 0.75rem;
   padding: 1rem;
   align-items: center;
   justify-content: space-between;
@@ -90,10 +90,10 @@ app-header-buttons{
 
 .primary-navigation{
   list-style: none;
-  padding: 1rem;
+  padding: 1rem 5vw;
   margin: 1rem 0;
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, .50);
-  border-radius: 1rem;
+  border-radius: 0.75rem;
   flex-wrap: wrap;
   justify-content: space-between;
 }
@@ -104,8 +104,61 @@ app-header-buttons{
   color: var(--text-color);
 }
 .primary-navigation a:hover{
-  font-weight: bolder;
+  /* font-weight: bolder; */
   text-decoration: underline var(--text-color);
+}
+
+/* .dropbtn {
+  background-color: #f9f9f9;
+  color: #0f0f0f;
+  padding: 8px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+} */
+
+.dropdown {
+  position: relative;
+  display: inline-block;  
+}
+
+.dropdown-content {
+  position: absolute;
+  background-color: var(--background-color);
+  box-shadow: 0px 13px 15px 0px rgba(0, 0, 0, .20);
+  border-radius: 0 0 0.75rem 0.75rem;
+  z-index: 98;
+  max-height: 0;
+  min-width: 100px;
+  transition: max-height 0.15s ease-out;
+  overflow: hidden;
+}
+
+.dropdown-content a {
+  color: var(--text-color);
+  background-color: var(--background-color);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  margin: 0;
+}
+
+/* .dropdown-content a:hover {
+  background-color: #e2e2e2;
+} */
+
+.dropdown:hover .dropdown-content {
+  max-height: 500px;
+  min-width: 160px;
+  transition: max-height 0.25s ease-in;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #f9f9f9;
+  border-bottom: 1px solid #e0e0e0;
+  transition: max-height 0.25s ease-in;
 }
 
 main{
@@ -120,7 +173,7 @@ article{
 .side-bar{
 padding-top: 2rem;
 box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
-border-radius: 1rem;
+border-radius: 0.75rem;
 }
 .side-bar ul {
   list-style-type: none;
@@ -132,7 +185,7 @@ border-radius: 1rem;
 
 footer{
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, .50);
-  border-radius: 1rem 1rem 0 0;
+  border-radius: 0.75rem 0.75rem 0 0;
   color: var(--text-color);
   text-align: center;
   font-weight: bold;
