Dropdown shadow top fixed/removed

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
   background-color: var(--background-color);
   color: var(--text-color);
   max-width: 1400px;
+  /* background-image: linear-gradient(to right,#00ffc8, rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), rgba(255,0,0,0), #00ffc8); */
+  /* box-shadow: 1rem 15px 150px 150px #00ffc8; */
+  /* outline: #00aeff solid 1000px; */
+  /* cool teal kinda color#00ffc8 */
 }
 
 h1 {
@@ -40,11 +44,20 @@ p {
 :root{
   --text-color: black;
   --background-color: #fffaf9;
+  /* background-color: var(--background-color); */
+  /* --shadow-color: rgba(0, 0, 0, .50); */
+  --shadow-color: rgb(0, 0, 0);
+  /* var(--shadow-color); */
+  --shadow-color-dropdown: rgba(0, 0, 0, 0.5);
+
 }
 .darkmode{
-  --text-color: rgb(228, 228, 228);
-  --background-color: rgb(56, 56, 61);
+  --text-color: rgba(228, 228, 228, 0.952);
+  /* --background-color: rgb(56, 56, 61); */
+  --background-color: #222;
   --social-filter: brightness(0) saturate(100%) invert(100%) sepia(1%) saturate(454%) hue-rotate(356deg) brightness(84%) contrast(115%);
+  --shadow-color: rgba(0, 255, 255, 0.666);
+  --shadow-color-dropdown: rgba(0, 255, 255, 0.333);
 }
 .center_image{
   display: block;
@@ -58,7 +71,7 @@ p {
 header{
   display: grid;
   grid-template-columns: auto auto;
-  box-shadow: 0 0 15px 0 rgba(0, 0, 0, .50);
+  box-shadow: 0 0 5px 0 var(--shadow-color);;
   border-radius: 0 0 0.75rem 0.75rem;
   padding: 1rem;
   align-items: center;
@@ -89,10 +102,11 @@ app-header-buttons{
 }
 
 .primary-navigation{
+  position: relative;
   list-style: none;
   padding: 1rem 5vw;
   margin: 1rem 0;
-  box-shadow: 0 0 15px 0 rgba(0, 0, 0, .50);
+  box-shadow: 0 0 5px 0 var(--shadow-color);;
   border-radius: 0.75rem;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -103,9 +117,22 @@ app-header-buttons{
   text-decoration: none;
   color: var(--text-color);
 }
-.primary-navigation a:hover{
-  /* font-weight: bolder; */
+/* .primary-navigation a:hover{
   text-decoration: underline var(--text-color);
+} */
+.primary-navigation li a::after{
+  content: '';
+  height: 3px;
+  width: 7rem;
+  background: rgb(0, 183, 255);
+  display: block;
+  position:absolute;
+  opacity: 0;
+  transition: all 0.2s;
+}
+.primary-navigation li a:hover::after{
+  opacity: 1;
+  z-index: 99;
 }
 
 /* .dropbtn {
@@ -127,9 +154,10 @@ app-header-buttons{
 .dropdown-content {
   position: absolute;
   background-color: var(--background-color);
-  box-shadow: 0px 13px 15px 0px rgba(0, 0, 0, .20);
+  /* box-shadow: 0px 13px 5px 0px var(--shadow-color); */
+  box-shadow: 2px 2px 1px var(--shadow-color-dropdown), -2px 2px 1px var(--shadow-color-dropdown);
   border-radius: 0 0 0.75rem 0.75rem;
-  z-index: 98;
+  z-index: 90;
   max-height: 0;
   min-width: 100px;
   transition: max-height 0.15s ease-out;
@@ -155,11 +183,11 @@ app-header-buttons{
   transition: max-height 0.25s ease-in;
 }
 
-.dropdown:hover .dropbtn {
+/* .dropdown:hover .dropbtn {
   background-color: #f9f9f9;
   border-bottom: 1px solid #e0e0e0;
   transition: max-height 0.25s ease-in;
-}
+} */
 
 main{
 display: grid;
@@ -172,7 +200,7 @@ article{
 
 .side-bar{
 padding-top: 2rem;
-box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
+box-shadow: 0 0 5px 0 var(--shadow-color);;
 border-radius: 0.75rem;
 }
 .side-bar ul {
@@ -184,7 +212,7 @@ border-radius: 0.75rem;
 
 
 footer{
-  box-shadow: 0 0 15px 0 rgba(0, 0, 0, .50);
+  box-shadow: 0 0 5px 0 var(--shadow-color);;
   border-radius: 0.75rem 0.75rem 0 0;
   color: var(--text-color);
   text-align: center;
