--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,10 @@
   /* var(--shadow-color); */
   --shadow-color-dropdown: rgba(0, 0, 0, 0.5);
   /* max-width: var(--max-page-width); */
-  -webkit-backdrop-filter: blur(); /* Add this line first, it fixes blur for Safari*/
 }
 
-html{
-}
+/* html{
+} */
 
 body {
   /* background-color: #fffaf9; */
@@ -81,7 +80,7 @@ header{
   display: grid;
   grid-template-columns: auto auto;
   box-shadow: 0 0 5px 0 var(--shadow-color);
-  border-radius: 0 0 0.75rem 0.75rem;
+  border-radius: 0 0 0.5rem 0.5rem;
   padding: 1rem;
   align-items: center;
   justify-content: space-between;
@@ -113,10 +112,10 @@ app-header-buttons{
 .primary-navigation{
   position: relative;
   list-style: none;
-  padding: 1rem 5vw;
+  padding: 1rem 7vw 0 7vw ;
   margin: 1rem 0;
   box-shadow: 0 0 5px 0 var(--shadow-color);;
-  border-radius: 0.75rem;
+  border-radius: 0.5rem;
   flex-wrap: wrap;
   justify-content: space-between;
 }
@@ -132,10 +131,10 @@ app-header-buttons{
 .primary-navigation li a::after{
   content: '';
   height: 3px;
-  width: 7rem;
+  width: 100%;
   background: rgb(0, 183, 255);
   display: block;
-  position:absolute;
+  position: relative;
   opacity: 0;
   transition: all 0.2s;
 }
@@ -157,20 +156,25 @@ app-header-buttons{
 
 .dropdown {
   position: relative;
-  display: inline-block;  
+  display: inline-block;
 }
 
 .dropdown-content {
   position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   background-color: var(--background-color);
   /* box-shadow: 0px 13px 5px 0px var(--shadow-color); */
   box-shadow: 2px 2px 1px var(--shadow-color-dropdown), -2px 2px 1px var(--shadow-color-dropdown);
-  border-radius: 0 0 0.75rem 0.75rem;
+  border-radius: 0 0 0.5rem 0.5rem;
   z-index: 90;
   max-height: 0;
   min-width: 100px;
   transition: max-height 0.3s ease-out;
   overflow: hidden;
+  /* This is the new added section to align the drop down on the right. */
+  text-align:center!important;
+
 }
 
 .dropdown-content a {
@@ -181,6 +185,22 @@ app-header-buttons{
   display: block;
   margin: 0;
 }
+
+/*  copy of the underline test for dropdown only
+.dropdown-content a::after{
+  content: '';
+  height: 3px;
+  width: 100%;
+  background: rgb(0, 183, 255);
+  display: block;
+  position: relative;
+  opacity: 0;
+  transition: all 0.2s;
+}
+.dropdown-content a:hover::after{
+  opacity: 1;
+  z-index: 99;
+} */
 
 /* .dropdown-content a:hover {
   background-color: #e2e2e2;
@@ -221,7 +241,7 @@ article{
   max-width: 100%;
   box-shadow: 0 0 5px 0 var(--shadow-color);
   padding: 2rem;
-  border-radius: 0.75rem;
+  border-radius: 0.5rem;
 }
 
 .media-element {
@@ -243,7 +263,7 @@ article{
 .side-bar{
 padding-top: 2rem;
 box-shadow: 0 0 5px 0 var(--shadow-color);;
-border-radius: 0.75rem;
+border-radius: 0.5rem;
 }
 .side-bar ul {
   list-style-type: none;
@@ -255,7 +275,7 @@ border-radius: 0.75rem;
 
 footer{
   box-shadow: 0 0 5px 0 var(--shadow-color);;
-  border-radius: 0.75rem 0.75rem 0 0;
+  border-radius: 0.5rem 0.5rem 0 0;
   color: var(--text-color);
   text-align: center;
   font-weight: bold;
@@ -311,6 +331,8 @@ footer a:hover{
     .primary-navigation{
       background: rgba(145, 145, 145, 0.1);
       backdrop-filter: blur(1rem);
+      -webkit-backdrop-filter: blur(1rem); /* Add this line first, it fixes blur for Safari*/
+
     }
   }
 
