--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
   /* var(--shadow-color); */
   --shadow-color-dropdown: rgba(0, 0, 0, 0.5);
   /* max-width: var(--max-page-width); */
+  --box-shadow-radius:  0.5rem;
 }
 
 /* html{
@@ -80,7 +81,7 @@ header{
   display: grid;
   grid-template-columns: auto auto;
   box-shadow: 0 0 5px 0 var(--shadow-color);
-  border-radius: 0 0 0.5rem 0.5rem;
+  border-radius: 0 0 var(--box-shadow-radius) var(--box-shadow-radius);
   padding: 1rem;
   align-items: center;
   justify-content: space-between;
@@ -92,7 +93,6 @@ app-header-buttons{
   grid-gap: 15px;
   grid-template-rows: repeat(auto-fill, minmax(30px, 1fr));
   justify-content: space-between;
-
 }
 
 .mobile-nav-toggle{
@@ -117,7 +117,7 @@ app-header-buttons{
   padding: 1rem 7vw 0 7vw ;
   margin: 1rem 0;
   box-shadow: 0 0 5px 0 var(--shadow-color);;
-  border-radius: 0.5rem;
+  border-radius: var(--box-shadow-radius);
   flex-wrap: wrap;
   justify-content: space-between;
 }
@@ -127,9 +127,11 @@ app-header-buttons{
   text-decoration: none;
   color: var(--text-color);
 }
+
 /* .primary-navigation a:hover{
   text-decoration: underline var(--text-color);
 } */
+
 .primary-navigation li a::after{
   content: '';
   height: 3px;
@@ -168,7 +170,7 @@ app-header-buttons{
   background-color: var(--background-color);
   /* box-shadow: 0px 13px 5px 0px var(--shadow-color); */
   box-shadow: 2px 2px 1px var(--shadow-color-dropdown), -2px 2px 1px var(--shadow-color-dropdown);
-  border-radius: 0 0 0.5rem 0.5rem;
+  border-radius: 0 0 var(--box-shadow-radius) var(--box-shadow-radius);
   z-index: 90;
   max-height: 0;
   min-width: 100px;
@@ -176,7 +178,6 @@ app-header-buttons{
   overflow: hidden;
   /* This is the new added section to align the drop down on the right. */
   text-align:center!important;
-
 }
 
 .dropdown-content a {
@@ -222,13 +223,12 @@ app-header-buttons{
 
 main{
 display: grid;
-grid-template-columns: 6fr 1fr;
+/* grid-template-columns: 6fr 1fr; */
 margin-bottom: 1rem;
 }
-article{
-  padding-right: 1rem;
+/* article{
   max-width: 80vw;
-}
+} */
 
 .media-scroller {
   --spacer: 1rem;
@@ -243,7 +243,7 @@ article{
   max-width: 100%;
   box-shadow: 0 0 5px 0 var(--shadow-color);
   padding: 2rem;
-  border-radius: 0.5rem;
+  border-radius: var(--box-shadow-radius);
 }
 
 .media-element {
@@ -265,7 +265,7 @@ article{
 .side-bar{
 padding-top: 2rem;
 box-shadow: 0 0 5px 0 var(--shadow-color);;
-border-radius: 0.5rem;
+border-radius: var(--box-shadow-radius);
 }
 .side-bar ul {
   list-style-type: none;
@@ -274,10 +274,9 @@ border-radius: 0.5rem;
   padding-right: 1rem;
 }
 
-
 footer{
   box-shadow: 0 0 5px 0 var(--shadow-color);;
-  border-radius: 0.5rem 0.5rem 0 0;
+  border-radius: var(--box-shadow-radius) var(--box-shadow-radius) 0 0;
   color: var(--text-color);
   text-align: center;
   font-weight: bold;
