--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@ header{
   box-shadow: 0 0 5px 0 var(--shadow-color);
   border-radius: 0 0 var(--box-shadow-radius) var(--box-shadow-radius);
   padding: 1rem;
+  margin-bottom: 1rem;
   align-items: center;
   justify-content: space-between;
  /* height: 10vh;*/
@@ -111,12 +112,18 @@ app-header-buttons{
   filter: var(--social-filter);
 }
 
+nav{
+  position: sticky;
+  top: 0;
+  z-index: 10000000;
+}
 .primary-navigation{
+  background: var(--background-color);
   /* position: fixed; */
   position: relative;
   list-style: none;
   padding: 1rem 7vw 1rem 7vw ;
-  margin: 1rem 0;
+  margin: 0;
   box-shadow: 0 0 5px 0 var(--shadow-color);;
   border-radius: var(--box-shadow-radius);
   flex-wrap: wrap;
@@ -239,6 +246,7 @@ border-radius: var(--box-shadow-radius);
   padding-left: 1rem;
   padding-right: 1rem;
 }
+
 
 footer{
   box-shadow: 0 0 5px 0 var(--shadow-color);
