--- a/styles.css
+++ b/styles.css
@@ -346,7 +346,7 @@ footer a:hover{
     }
   }
 
-  .primary-navigation[data-visible="true"] {
+  .primary-navigation[nav-visible="true"] {
     transform: translateX(0%);
   }
 
